--- a/app/src/main/res/layout/list_item_edit_task.xml
+++ b/app/src/main/res/layout/list_item_edit_task.xml
@@ -24,16 +24,25 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="10dp"
         android:text="@string/card_front_text"
         android:textAlignment="textStart"
         android:textSize="34sp"
         android:textStyle="bold"
         app:flow_verticalAlign="top"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/rename_task_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextSizeCheck,VisualLintOverlap" />
+
+    <ImageButton
+        android:id="@+id/delete_task_button"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/round_corner"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/rename_task_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_delete" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
