--- a/app/src/main/res/layout/fragment_routine_list.xml
+++ b/app/src/main/res/layout/fragment_routine_list.xml
@@ -53,6 +53,16 @@ android:layout_height="match_parent">
             app:srcCompat="@drawable/ic_plus"
             tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />
 
+        <ImageButton
+            android:id="@+id/switch_color_button"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:background="@color/purple_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_halfsun"
+            tools:ignore="SpeakableTextPresentCheck" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
